--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,8 @@
 Changelog
 =========
 
-1.0-dev - (unreleased)
-----------------------
+1.0 - (2012-03-05)
+------------------
+* Initial release
+  [voineali]
 
-- Initial release
