--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+1.2-dev - (unreleased)
+----------------------
+
 1.1 - (2012-06-12)
 ------------------
 * Added watermark utility
