--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 1.2-dev - (unreleased)
 ----------------------
+* Fixed dependencies, cleanup and make the package run on a clean Zope
+  [ghicaale #5426]
 
 1.1 - (2012-06-12)
 ------------------
