--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.1-dev - (unreleased)
+----------------------
+
 6.0 - (2012-10-08)
 ------------------
 * Fixed dependencies, cleanup and make the package run on a clean Zope
