--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 6.2-dev - (unreleased)
 ----------------------
+* Feature: Export HTML to PDF with custom cover (requires collective.sendaspdf)
+  [voineali refs #14904]
 
 6.1 - (2013-02-25)
 ------------------
@@ -25,4 +27,3 @@ Changelog
 ------------------
 * Initial release
   [voineali]
-
