--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.3-dev - (unreleased)
+----------------------
+
 6.2 - (2013-09-23)
 ------------------
 * Feature: Export HTML to PDF with custom cover (requires collective.sendaspdf)
