--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.4-dev - (unreleased)
+----------------------
+
 6.3 - (2013-10-04)
 ------------------
 * Bug fix: Fixed PDF cover asking for credentials for non-published documents
