Updated version for eea.converter to 6.6-dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.6-dev - (unreleased)
+----------------------
+
 6.5 - (2013-10-22)
 ------------------
 * Bug fix: return first page on pdf to image conversion; refactor cover
