--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 6.6-dev - (unreleased)
 ----------------------
+* Feature: adding Sphinx-generated documentation in Page Template format
+  [batradav refs #9502]
 
 6.5 - (2013-10-22)
 ------------------
