--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 6.7-dev - (unreleased)
 ----------------------
+* Bug fix: Do not add table of content on PDF cover
+  [voineali refs #18630]
 * Change: pass a doctype to the header pdf template in order to workaround
   wkhtmltopdf 0.12 issue which fails to insert the header without it
   [ichim-david refs #18550]
