--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+6.8-dev - (unreleased)
+----------------------
+
 6.7 - (2014-03-10)
 ------------------
 * Bug fix: Do not add table of content on PDF cover
