--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 7.1-dev - (unreleased)
 ----------------------
+* Feature: Enabled javascript by default within PDF export.
+  [voineali refs #20459]
 * Feature: Added API to restrict access to download.pdf
   [voineali refs #20436]
 
