--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 7.1-dev - (unreleased)
 ----------------------
+* Bug fix: Align PDF Table of Contents trailing dotted with page number
+  [voineali refs #20431]
 * Bug fix: Fix long PDF header and footer texts and align left or right
   according with page parity
   [voineali refs #20431]
