--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+7.2-dev - (unreleased)
+----------------------
+
 7.1 - (2014-08-12)
 ------------------
 * Bug fix: Align PDF Table of Contents trailing dotted with page number
