--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+8.1-dev - (unreleased)
+----------------------
+
 8.0 - (2014-09-15)
 ------------------
 * Feature: Possibility to run a PDF conversion job in safe mode (default) or not
