Refs #21100 - Prefix temporary files with package name
- Prefix temp files with package name in order to easily spot uncleaned
  temp files.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 8.1-dev - (unreleased)
 ----------------------
+* Change: Prefix temporary files with package name: eea.converter.
+  [voineali refs #21100]
 
 8.0 - (2014-09-15)
 ------------------
