--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+8.2-dev - (unreleased)
+----------------------
+
 8.1 - (2014-10-01)
 ------------------
 * Change: Prefix temporary files with package name: eea.converter.
