--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+8.3-dev - (unreleased)
+----------------------
+
 8.2 - (2014-10-15)
 ------------------
 * Bug fix: Protect against random wkhtmltopdf Segmentation fault errors and
