--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+8.4-dev - (unreleased)
+----------------------
+
 8.3 - (2014-11-20)
 ------------------
 * Bug fix: Fixed table of contents page alignment
