--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+8.5-dev - (unreleased)
+----------------------
+
 8.4 - (2014-11-28)
 ------------------
 * Bug fix: Fixed duplicate cookies when printing collection header/footer by
