--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+8.6-dev - (unreleased)
+----------------------
+
 8.5 - (2014-12-02)
 ------------------
 * Bug fix: Added possibility to define shared temporary directory using os.env
