--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 8.6-dev - (unreleased)
 ----------------------
+* Bug fix: Use *with* statement with temporary files in order to ensure that they
+  are safely closed before exit
+  [voineali refs #22080]
 * Bug fix: While creating authentication cookie-jar, also be aware of
   CDN resources
   [voineali refs #22080]
