--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,11 @@
 Changelog
 =========
 
-8.8.dev0 - (unreleased)
+9.0.dev0 - (unreleased)
 -----------------------
+* Change: Moved async API from eea.pdf to eea.converter in order to reuse it
+  for other async jobs (e.g. eea.epub)
+  [voineali refs #22971]
 
 8.7 - (2015-02-16)
 ------------------
