Updated version for eea.converter to 9.1.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+9.1.dev0 - (unreleased)
+-----------------------
+
 9.0 - (2015-02-25)
 ------------------
 * Bug fix: Fixed UnicodeDecodeError within download.pdf template
