Refs #24351; added history entry; simplified the toc checking by removing the when clause since the checks were performing the same logic opting to use a simple if statement

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 9.2.dev0 - (unreleased)
 -----------------------
+* Feature: added the possibility to limit the header tags that appear within
+  the table of contents
+  [ichimdav refs #24351]
 
 9.1 - (2015-03-17)
 ------------------
