--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+9.3.dev0 - (unreleased)
+-----------------------
+
 9.2 - (2015-04-02)
 ------------------
 * Feature: added the possibility to limit the header tags that appear within
