--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+9.4.dev0 - (unreleased)
+-----------------------
+
 9.3 - (2015-05-05)
 ------------------
 * Change: changed footer and header templates in order to preserve template
