--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 9.4.dev0 - (unreleased)
 -----------------------
+* Bug fix: Keep Job within wk.py for backward compatibility
+  [voineali refs #25755]
 
 9.3 - (2015-05-05)
 ------------------
@@ -20,7 +22,7 @@ Changelog
 ------------------
 * Change: Switched to curl in the jenkins builds install script
   [olimpiurob refs #22402]
-* Change: Changed fetch url for jenkins builds install script to the install 
+* Change: Changed fetch url for jenkins builds install script to the install
   script from the main EEA CPB repository
   [olimpiurob refs #22402]
 
