--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+9.5.dev0 - (unreleased)
+-----------------------
+
 9.4 - (2015-05-26)
 ------------------
 * Bug fix: Keep Job within wk.py for backward compatibility
