--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+9.7.dev0 - (unreleased)
+-----------------------
+
 9.6 - (2015-08-18)
 ------------------
 * Change: added pdf_custom_fixes.css loaded by pdf.header and pdf.footer
