Refs #28522 - Refactoring - Moved cover image utility from eea.reports

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,7 +2,9 @@ Changelog
 =========
 
 10.0.dev0 - (unreleased)
------------------------
+------------------------
+* Feature: Added utility to extract cover image from PDF. Moved from eea.reports
+  [voineali refs #28522]
 * Change: Drop pdftk dependency and use pure Python PyPDF2 package
   [voineali refs #28522]
 
