Updated version for eea.converter to 10.2.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+10.2.dev0 - (unreleased)
+------------------------
+
 10.1 - (2015-10-22)
 -------------------
 * Bug Fix; add -flatten option to fix #28943. It's prevent transparence cover
