Refs #31324 - Fix wkhtmltox dependency for CentOS

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 10.3.dev0 - (unreleased)
 ------------------------
+* Change: Fixed wkhtmltox dependency on centos
+  [voineali refs #31324]
 
 10.2 - (2015-12-07)
 -------------------
