Updated version for eea.converter to 10.7.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+10.7.dev0 - (unreleased)
+------------------------
+
 10.6 - (2016-03-31)
 -------------------
 * Cleanup: Cleanup pdftk specific code
