Updated version for eea.converter to 10.9.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+10.9.dev0 - (unreleased)
+------------------------
+
 10.8 - (2016-10-03)
 -------------------
 * Change: Use IContextWrapper from plone.stringinterp intead of custom one
