--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+11.0.dev0 - (unreleased)
+------------------------
+
 10.9 - (2016-10-06)
 -------------------
 * Bug fix: Fixed regression bug introduced within version 10.8 about
