--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+11.1.dev0 - (unreleased)
+------------------------
+
 11.0 - (2016-10-14)
 -------------------
 * Change: changed styling of pdf.toc headers
