Refs #78802 added pdf_custom_fixes to pdf.toc.pt and lowered font-size for pdf.toc

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,9 @@ Changelog
 
 11.1.dev0 - (unreleased)
 ------------------------
+* Feature: Added pdf_custom_fixes to pdf.toc.pt in case this template would need
+  custom css fixes
+  [ichim-david refs #78802]
 
 11.0 - (2016-10-14)
 -------------------
