Updated version for eea.converter to 11.2.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+11.2.dev0 - (unreleased)
+------------------------
+
 11.1 - (2016-11-07)
 -------------------
 * Feature: Added pdf_custom_fixes to pdf.toc.pt in case this template would need
