Updated version for eea.converter to 11.3.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+11.3.dev0 - (unreleased)
+------------------------
+
 11.2 - (2017-01-17)
 -------------------
 * Feature: added internationalization on "Contents" appearing in PDF TOC
