--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+11.6.dev0 - (unreleased)
+------------------------
+
 11.5 - (2017-04-24)
 -------------------
 * Change: updated package information
