Updated version for eea.converter to 11.7.dev0

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+11.7.dev0 - (unreleased)
+------------------------
+
 11.6 - (2017-05-08)
 -------------------
 * Change: removed pdf.header title values if we print within collection.pdf.body
