--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 11.7.dev0 - (unreleased)
 ------------------------
+* Change: fixed PyLint warnings and errors
+  [eduard-fironda refs #84949]
 
 11.6 - (2017-05-08)
 -------------------
