--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+11.8.dev0 - (unreleased)
+------------------------
+
 11.7 - (2017-05-15)
 -------------------
 * Change: fixed PyLint warnings and errors
