--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 11.8.dev0 - (unreleased)
 ------------------------
+* Change: fixed PyLint warnings and errors
+  [valipod refs #84949]
 
 11.7 - (2017-05-15)
 -------------------
