--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+11.9.dev0 - (unreleased)
+------------------------
+
 11.8 - (2017-05-22)
 -------------------
 * Change: fixed PyLint warnings and errors
