--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,9 @@
 Changelog
 =========
 
+12.0.dev0 - (unreleased)
+------------------------
+
 11.9 - (2017-06-26)
 -------------------
 * Change: Remove hard-dependency on plone.stringinterp
