Possibility to group download info within AsyncInfo namedtuple

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,7 +2,9 @@ Changelog
 =========
 
 12.2 - (2018-04-20)
-------------------------
+-------------------
+* Change: Possibility to group download info within AsyncInfo namedtuple
+  [avoinea]
 
 12.1 - (2017-12-12)
 -------------------
