--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 12.5-dev0 - (unreleased)
 ---------------------
+* Change: Update cover colorspace to CMYK to work with ghostscript 9.26+
+  [avoinea refs #99812]
 
 12.4 - (2018-08-28)
 ---------------------
