Refs #101483 - Revert colorspace to sRGB

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 12.6-dev0 - (unreleased)
 ---------------------
+* Change: Revert cover colorspace to sRGB
+  [avoinea refs #101483]
 
 12.5 - (2018-12-05)
 ---------------------
