--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -3,6 +3,8 @@ Changelog
 
 12.7 - (2019-01-28)
 ---------------------
+* Jenkins: Add sonarqube step
+  [avoinea refs #101552]
 
 12.6 - (2019-01-17)
 ---------------------
